post jam fixes